# LAG_Openbook_FIX_Server

./: .gitignore  openbook-fix-scenarios.txt
docs/: SerumFIX44.xml  SerumFIXProtocol.docx  client_stream.cfg  client_stream_template.cfg  client_trade.cfg  fix_server.xml  hf_server.xml  market_settings.json  server_stream_template.cfg  ~$rumFIXProtocol.docx
fix-client-tests/doc/: SerumFIXProtocol.docx
fix-client-tests/python/: L1_l2_subscription_logs.docx  SerumFIX44.xml  application.py  client_stream.cfg  client_stream_template.cfg  client_trade.cfg  fix_client_wrapper.py  readme.txt  test_data.py  test_trade.py
serum-cplus/: .gitignore  BUILD.md  CMakeLists.txt  README.md
serum-cplus/BrokerLib/: BrokerModels.h  IBrokerApplication.h  IBrokerClient.h  IListener.h  ISettings.h
serum-cplus/SerumApp/: CMakeLists.txt  SerumAdapter.h  SerumApp.cpp  SerumApp.h  SerumListener.cpp  SerumListener.h
serum-cplus/SerumDEX/: CMakeLists.txt  SerumAdapter.h  SerumMD.cpp  SerumMD.h  SerumPoolsRequester.cpp  SerumPoolsRequester.h  SerumTrade.cpp  SerumTrade.h
serum-cplus/SerumDEX/PoolRequester/: InstrumentJSON.cpp  InstrumentJSON.h  InstrumentsJSON.cpp  InstrumentsJSON.h  PoolsRequester.cpp  PoolsRequester.h  market.json
serum-cplus/SerumDEX/PoolRequester/OldSerumPoolRequester/: SerumPoolsRequester.cpp
serum-cplus/SerumDEX/SerumMarket/: FileSettings.cpp  FileSettings.hpp  Market.hpp  MintAddresses.hpp  UserCredentials.cpp  UserCredentials.hpp  constants.h  constants.hpp  enums.h  enums.hpp  instruments.cpp  instruments.h  market.cpp  market.h  models.hpp  structs.h  sysvar.h  sysvar.hpp  transaction.cpp  transaction.h
serum-cplus/SerumDEX/SerumMarket/sol_sdk/: cpi.h  entrypoint.h  key.h  types.h
serum-cplus/Test/: Appendix.hpp  CMakeLists.txt  SerumAppTest.cpp  SerumListenerTest.cpp  SerumMDTest.cpp  SerumMarketTest.cpp  SerumTradeTest.cpp  Test.cpp  market_settings.json  settings.h
serum-cplus/Utility/: ConnectionWrapper.h
serum-cplus/base58/: CMakeLists.txt  alphabets.h  base58.cpp  base58.h
serum-cplus/base64/: CMakeLists.txt  base64.h
serum-cplus/cli/: CMakeLists.txt  daemon.cpp  main.cpp
serum-cplus/cmake/Modules/: FindFix8.cmake  FindP7.cmake
serum-cplus/instruments/: CMakeLists.txt  converter.cpp  converter.hpp
serum-cplus/libP7Client_v5.3/: build.sh
serum-cplus/libP7Client_v5.3/Headers/: GTypes.h  P7_Client.h  P7_Cproxy.h  P7_Extensions.h  P7_Version.h
serum-cplus/libP7Client_v5.3/Shared/: Length.h  Lock.h  QStringHelper.h
serum-cplus/libP7Client_v5.3/Sources/: ClBaical.cpp  ClBaical.h  ClFile.cpp  ClFile.h  ClNull.cpp  ClNull.h  ClText.cpp  ClText.h  ClTextFile.h  ClTextSyslog.h  Client.cpp  Client.h  CommonClient.h  P7ClientLib.vcxproj  Proxy.cpp  Telemetry.cpp  Telemetry.h  Trace.cpp  Trace.h  makefile
serum-cplus/libP7Client_v5.3/Wrappers/C#/: P7.cs
serum-cplus/libP7Client_v5.3/Wrappers/Py/: P7.py
serum-cplus/marketlib/: CMakeLists.txt
serum-cplus/marketlib/include/: BrokerModels.h  enums.h  market.h
serum-cplus/serum/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  FIX8_SERUM_Data_classes.cpp  FIX8_SERUM_Data_classes.hpp  FIX8_SERUM_Data_router.hpp  FIX8_SERUM_Data_session.hpp  FIX8_SERUM_Data_traits.cpp  FIX8_SERUM_Data_types.cpp  FIX8_SERUM_Data_types.hpp  FIX8_SERUM_Order_classes.cpp  FIX8_SERUM_Order_classes.hpp  FIX8_SERUM_Order_router.hpp  FIX8_SERUM_Order_session.hpp  FIX8_SERUM_Order_traits.cpp  FIX8_SERUM_Order_types.cpp  FIX8_SERUM_Order_types.hpp  SERUM_Data_session.cpp  SERUM_Data_session.hpp  SERUM_Order_sandbox_session.cpp  SERUM_Order_sandbox_session.hpp  SERUM_Order_session.cpp  SERUM_Order_session.hpp  SerumSettings.h
serum-cplus/sharedlib/: CMakeLists.txt
serum-cplus/sharedlib/include/: ConnectionWrapper.h  HTTPClient.h  IBrokerApplication.h  IBrokerClient.h  IListener.h  ILogger.h  IMarket.h  IMarketSettings.h  IPoolsRequester.h  Logger.h
serum-cplus/sol_sdk/: CMakeLists.txt  Hash.cpp  Hash.hpp  Instruction.cpp  Instruction.hpp  Keypair.cpp  Keypair.hpp  PublicKey.cpp  PublicKey.hpp  Transaction.cpp  Transaction.hpp  enums.hpp
serum-vial-python/: MarketDataUI.py  README.md  main.py  models.py  wrapper.py
serum-vial-python/serum_modules/: config.py  models.py  wrapper.py
serum-vial-python/ui/: design.py  design.ui  events.py  logger.py
serum-vial-rust/: Cargo.toml
serum-vial-rust/serum/: Cargo.toml
serum-vial-rust/serum/src/: lib.rs
serum-vial-rust/serum/src/websocket/: core.rs  mod.rs  request.rs  response.rs
serum-vial-rust/shared/: Cargo.toml
serum-vial-rust/shared/src/: lib.rs
serum-vial-rust/shared/src/all/: base.rs  enums.rs  fixutils.rs  logging.rs  mod.rs  websocket.rs
serum-vial-rust/src/: main.rs
