[package]
name = "serum-vial-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serum = { path = "serum" }
openssl-sys = "0.9.71"
shared = { path = "shared" }
websocket = "0.26.2"
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"] }
url = "2.2.2"
strum = "0.22.0"
paste = "1.0.6"
strum_macros = "0.22.0"
crossbeam = "0.8.1"
field_types = "1.1.0"
variant_count = "1.1.0"
ws = { version = "0.9.1", features = ["ssl", "native-tls"] }
tokio = { version = "1.13.0", features = ["full"] }
hmac-sha = "0.6.1"
syn = "1.0.81"
quote = "1.0.10"
sha2 = "0.9.8"
hex = "0.4.3"
futures = "0.3.17"
async-trait = "0.1.51"
chrono = "0.4"
env_logger = "0.9.0"
fxhash = "0.2.1"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.async-std]
version = "1.7.0"
features = ["attributes", "unstable"]